...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@={reminderDataItem.title}"
            app:layout_constraintTop_toBottomOf="@+id/location"
            tools:text="Title" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
...
